# Emo_Comprehension_Pipeline

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
docs/: BUILD.md  README.md  dac-roadmap.md  ethical-oversight.md  identity-continuity.md  physix-overview.md  pipeline-spec.md  scaling-basi.md
examples/: README.md  emotional-cases-dataset.json  input-output-samples.json
src/: README.md
src/emo_comprehension/: __init__.py  py.typed
src/emo_comprehension/core/: __init__.py  analyzer.py  comprehension.py  response.py
src/emo_comprehension/utils/: __init__.py
src/hyperon/: README.md
src/ionation/: README.md
src/metta/: README.md
src/tqnn/: README.md
src/y0x1/: README.md
tests/: README.md  conftest.py  pipeline-validation.py  test_analyzer.py  test_comprehension.py  test_response.py  test_utils.py
